manifests/core-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-app-ingress
  namespace: production
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: app.local.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-app-svc
                port:
                  number: 80
